<?xml version="1.0"?>
<package>
  <name>lcm_to_ros</name>
  <version>0.0.0</version>
  <description>The lcm_to_ros package</description>

  <maintainer email="nicholas.lawrance@oregonstate.edu">nick</maintainer>

  <license>TODO</license>


  <!-- The *_depend tags are used to specify dependencies -->
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
